fix: spacing in home

--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,10 +1,93 @@
+/* home.css */
+
+/* Estilo para o contêiner de eventos */
+.event-container {
+  position: relative;
+  width: 310px;
+  height: 400px;
+  overflow-y: auto;
+  margin-bottom: 80px;
+}
+
+/* Estilo para cada cartão de evento */
+.event-card {
+  width: 100%;
+  height: 146px;
+  border-radius: 8px;
+  background-color: rgba(180, 180, 180, 0.3);
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  position: relative;
+}
+
+/* Estilo para a seção de data e mês */
+.event-date {
+  width: 79px;
+  height: 146px;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  background-color: rgba(133, 56, 255, 1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+}
+
+/* Estilo para a data */
+.event-date p.date {
+  margin: 0;
+  font-size: 40px;
+  color: white;
+  font-weight: bold;
+}
+
+/* Estilo para o mês */
+.event-date p.month {
+  margin: 0;
+  font-size: 19px;
+  color: white;
+  font-weight: bold;
+}
+
 .section-title {
-    font-size: 14px;
-    font-weight: bold;
-    text-align: left;
-    display: block;
-    position: relative;
-    width: 100%;
-    margin-bottom: 20px; /* Espaço abaixo do título */
-    padding-bottom: 16px; /* Espaço entre o texto e a linha */
-  }
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  width: 310px
+}
+
+/* Estilo para o conteúdo do cartão */
+.event-content {
+  flex: 1;
+  padding: 10px;
+}
+
+/* Estilo para o título do evento */
+.event-title {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+/* Estilo para a descrição do evento */
+.event-description {
+  font-size: 12px;
+  margin-bottom: 5px;
+}
+
+/* Estilo para a localização */
+.event-location {
+  display: flex;
+  align-items: center;
+}
+
+.event-location img {
+  width: 16px; /* Ajuste o tamanho do ícone conforme necessário */
+  height: 16px;
+  margin-right: 5px;
+}
+
+.event-location p {
+  font-size: 12px;
+}
